--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
     "cSpell.words": [
         "Caltech",
         "CUDA",
+        "divykj",
         "Doxygen",
         "Mathematica",
         "Scriven",
-        "vcpkg"
+        "vcpkg",
+        "wakatime"
     ]
 }
