stop updates for now

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,8 +1,8 @@
 name: Update README
 
-on:
-  schedule:
-    - cron: "*/30 * * * *"
+on: [pull_request]
+  # schedule:
+    # - cron: "*/30 * * * *"
   workflow_dispatch:
 
 jobs:
